[package]
name = "lemmings-driver-virtio-net"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
lemmings-allocator = { path = "../../lib/allocator" }
lemmings-idl-ethernet = { path = "../../IDL/rust/ethernet" }
lemmings-idl-pci = { path = "../../IDL/rust/pci" }
lemmings-door = { path = "../../lib/door" }
lemmings-pci = { path = "../../lib/pci" }
lemmings-spinlock = { path = "../../lib/spinlock" }
lemmings-virtio-net = { path = "../../lib/virtio-net" }

[profile.release]
lto = "fat"
