[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
lemmings-qemubios = { path = "../../../lib/qemubios" }
lemmings-x86_64 = { path = "../../../lib/x86_64" }
lemmings-tty = { path = "../../../lib/tty" }
lemmings-spinlock = { path = "../../../lib/spinlock" }
lemmings-idl-archive = { path = "../../../IDL/rust/archive" }
lemmings-idl-irq = { path = "../../../IDL/rust/irq" }
lemmings-idl-loader-elf = { path = "../../../IDL/rust/loader-elf" }
lemmings-idl-pci = { path = "../../../IDL/rust/pci" }
lemmings-idl-allocator = { path = "../../../IDL/rust/allocator" }
lemmings-idl-thread = { path = "../../../IDL/rust/thread" }

[profile.release]
lto = "fat"
overflow-checks = true
